fix: исправить согласно замечаниям ревьюера test: добавить юнит тесты